<resources>
    <string name="app_name">Meleti Spacetron</string>
    <string name="types_of_stars">Types of Stars</string>
    <string name="meleti_spacetron">Meleti Spacetron</string>
    <string name="star_size_comparison">Star Size Comparison</string>
    <string name="imgbtn2">imgbtn2</string>
    <string name="imgbtn1">imgbtn1</string>
    <string name="imgbtn3">imgbtn3</string>
    <string name="imgbtn4">imgbtn4</string>
    <string name="menu">Menu</string>
    <string name="about_stars">About Stars</string>
    <string name="about">About</string>
    <string name="constellation">Constellation</string>
    <string name="learn">Learn</string>
    <string name="study_about_stars_in_space">study about stars in space</string>
    <string name="start">start</string>
    <string name="solar_type_stars">Solar Type Stars</string>
    <string name="hot_blue_stars">Hot Blue Stars</string>
    <string name="red_dwarf_stars">Red Dwarf Stars</string>
    <string name="red_giant_stars">Red Giant Stars</string>
    <string name="white_dwarf_stars">White Dwarf Stars</string>
    <string name="neutron_stars_and_blackholes">Neutron Stars and Blackholes</string>
    <string name="launch">launch</string>
    <string name="logo">Logo</string>
    <string name="tslogo">TSlogo</string>
    <string name="r_repolis">R Repolis</string>
    <string name="eta_carinae_a">ETA Carinae A</string>
    <string name="rho_cassiopeiae">RHO Cassiopeiae</string>
    <string name="v509_cassiopeiae">V509 Cassiopeiae</string>
    <string name="v382_carinae">V382 Carinae</string>
    <string name="cw_leonis">CW Leonis</string>
    <string name="v528_carinae">V528 Carinae</string>
    <string name="v648_cassiopeiae">V648 Cassiopeiae</string>
    <string name="v915_scorpii">V915 Scorpii</string>
    <string name="rs_persei">RS Persei</string>
    <string name="v355_cephei">V355 Cephei</string>
    <string name="s_persei">S Persei</string>
    <string name="su_persei">SU Persei</string>
    <string name="bo_carinae">BO Carinae</string>
    <string name="v348_puppis">V348 Puppis</string>
    <string name="bc_cygni">BC Cygni</string>
    <string name="antares_a">Antares A</string>
    <string name="betelgeuse">Betelgeuse</string>
    <string name="ix_carinae">IX Carinae</string>
    <string name="s_cassiopeiae">S Cassiopeiae</string>
    <string name="gcirs_7">GCIRS 7</string>
    <string name="hv_2112">HV 2112</string>
    <string name="du_crucis">DU Crucis</string>
    <string name="nr_vulpeculae">NR Vulpeculae</string>
    <string name="kw_sagittarii">KW Sagittarii</string>
    <string name="vv_cephei_a">VV Cephei A</string>
    <string name="v602_carinae">V602 Carinae</string>
    <string name="hv_11423">HV 11423</string>
    <string name="ck_carinae">CK Carinae</string>
    <string name="v396_centauri">V396 Centauri</string>
    <string name="rt_carinae">RT Carinae</string>
    <string name="ev_carinae">EV Carinae</string>
    <string name="nml_cygni">NML Cygni</string>
    <string name="pz_cassiopeiae">PZ Cassiopeiae</string>
    <string name="irc_10414">IRC-10414</string>
    <string name="bi_cygni">BI Cygni</string>
    <string name="mu_cephei">MU Cephei</string>
    <string name="smc_18136">SMC 18136</string>
    <string name="hr_5171_a">HR 5171 A</string>
    <string name="vx_sagittarii">VX Sagittarii</string>
    <string name="ah_scorpii">AH Scorpii</string>
    <string name="vy_canis_majoris">VY Canis Majoris</string>
    <string name="ky_cygni">KY Cygni</string>
    <string name="v354_cephei">V354 Cephei</string>
    <string name="westerlund_1_26">Westerlund 1-26</string>
    <string name="rw_cephei">RW Cephei</string>
    <string name="woh_g64">WOH G64</string>
    <string name="uy_scuti">UY Scuti</string>
    <string name="st2_18">ST2-18</string>
    <string name="known_stars_size">Known Stars Size</string>
    <string name="known_stars_size_smallest_to_largest">Known Stars Size Smallest to Largest</string>
    <string name="_7_colors_of_the_stars">7 Colors of the Stars</string>
    <string name="a_solar_type_star_has_about_the_same_mass_as_our_sun_and_is_fusing_hydrogen_into_helium_at_its_core_the_result_is_the_familiar_yellow_ish_glow_that_characterises_many_of_the_stars_we_see_in_the_sky_and_a_long_lived_stable_star_with_a_lifetime_of_billions_of_years">A Solar-type star has about the same mass as our Sun and is fusing hydrogen into helium at its core. The result is the familiar yellow-ish glow that characterises many of the stars we see in the sky, and a long-lived, stable star with a lifetime of billions of years.</string>
    <string name="the_brightest_solar_type_star_in_the_sky_is_alpha_centauri_which_is_very_close_to_us_alpha_cen_is_actually_a_double_star_system_we_call_a_binary_but_the_brighter_component_is_only_a_little_larger_than_our_own_sun_unfortunately_alpha_cen_is_in_the_southern_hemisphere_in_fact_most_of_the_nearby_sun_like_stars_are_in_the_south_the_ones_in_the_northern_hemisphere_tend_to_be_fainter_but_if_you_can_find_the_constellation_draco_some_of_its_brighter_stars_are_the_solar_type">The brightest Solar-type star in the sky is Alpha Centauri, which is very close to us. Alpha Cen is actually a double-star system we call a binary, but the brighter component is only a little larger than our own Sun. Unfortunately, Alpha Cen is in the southern hemisphere. In fact most of the nearby sun-like stars are in the south! The ones in the northern hemisphere tend to be fainter, but if you can find the constellation Draco, some of its brighter stars are the Solar-type.</string>
    <string name="solar_analog">Solar Analog</string>
    <string name="stars_which_are_much_more_massive_than_our_sun_burn_hotter_but_for_much_less_time_living_and_dying_within_a_few_million_years_just_as_a_hot_gas_flame_burns_blue_so_these_stars_show_a_bright_blue_light_and_because_they_re_so_bright_we_can_see_a_lot_of_them_from_the_ground">Stars which are much more massive than our Sun burn hotter but for much less time, living and dying within a few million years. Just as a hot gas flame burns blue, so these stars show a bright blue light and because they’re so bright, we can see a lot of them from the ground.</string>
    <string name="an_example_in_the_sky_is_the_bright_star_spica_in_the_constellation_of_virgo_you_can_find_it_by_looking_for_the_plough_the_big_dipper_and_following_along_the_curve_of_its_handle_if_you_keep_going_you_ll_pick_up_first_arcturus_a_red_giant_described_below_and_then_spica">An example in the sky is the bright star Spica in the constellation of Virgo. You can find it by looking for the Plough (the “Big Dipper”) and following along the curve of its handle. If you keep going you’ll pick up first Arcturus (a red giant described below) and then Spica.</string>
    <string name="stars_which_are_much_less_massive_than_our_sun_burn_cooler_and_live_longer_potentially_for_hundreds_of_billions_of_years_the_resulting_dull_red_stars_are_actually_the_most_common_type_in_our_galaxy_but_since_they_re_quite_dim_they_re_hard_to_see">Stars which are much less massive than our Sun burn cooler, and live longer – potentially for hundreds of billions of years. The resulting dull red stars are actually the most common type in our galaxy but since they’re quite dim, they’re hard to see.</string>
    <string name="the_nearest_red_dwarfs_are_probably_proxima_centauri_and_barnard_s_star_but_both_of_these_are_too_faint_to_see_with_the_unaided_eye_if_you_have_access_to_one_barnard_s_star_should_be_visible_with_a_small_telescope">The nearest red dwarfs are probably Proxima Centauri and Barnard’s Star, but both of these are too faint to see with the unaided eye. If you have access to one, Barnard’s Star should be visible with a small telescope.</string>
    <string name="the_coolest_red_dwarfs_near_the_sun_have_a_surface_temperature_of_2_000_k_and_the_smallest_have_radii_of_9_that_of_the_sun_with_masses_about_7_5_that_of_the_sun_these_red_dwarfs_have_spectral_classes_of_l0_to_l2_there_is_some_overlap_with_the_properties_of_brown_dwarfs_since_the_most_massive_brown_dwarfs_at_lower_metallicity_can_be_as_hot_as_3_600_k_and_have_late_m_spectral_types">The coolest red dwarfs near the Sun have a surface temperature of ~2,000 K and the smallest have radii of ~9% that of the Sun, with masses about ~7.5% that of the Sun. These red dwarfs have spectral classes of L0 to L2. There is some overlap with the properties of brown dwarfs, since the most massive brown dwarfs at lower metallicity can be as hot as 3,600 K and have late M spectral types.</string>
    <string name="v915_scorpii_is_an_orange_hypergiant_variable_star_in_the_constellation_scorpius">V915 Scorpii is an orange hypergiant variable star in the constellation Scorpius.</string>
    <string name="radius_397_244_million_km">Radius: 397.244 million km</string>
    <string name="distance_to_earth_5_900_600_light_years">Distance to earth: 5,900 ± 600 light years</string>
    <string name="b_v_color_index_2_25">B−V color index: 2.25</string>
    <string name="radial_velocity_rv_46_00_km_s">Radial velocity (Rv): 46.00 km/s</string>
    <string name="apparent_magnitude_v_6_22_6_64">Apparent magnitude (V): 6.22 - 6.64</string>
    <string name="distance_1_800_200_pc">Distance: (1,800 ± 200 pc)</string>
    <string name="bc_cygni_is_a_red_supergiant_and_pulsating_variable_star_of_spectral_type_m3_5ia_in_the_constellation_cygnus">BC Cygni is a red supergiant and pulsating variable star of spectral type M3.5Ia in the constellation Cygnus.</string>
    <string name="radius_717_266_million_km">Radius: 717,266 million km</string>
    <string name="distance_to_earth_1148_46_light_years">Distance to earth: 1148.46 Light Years</string>
    <string name="apparent_magnitude_v_9_0_10_8">Apparent magnitude (V): 9.0 - 10.8</string>
    <string name="radial_velocity_rv_22_85_km_s">Radial velocity (Rv): –22.85 km/s</string>
    <string name="distance_352_11_pc">Distance: 352.11 pc</string>
    <string name="b_v_color_index_3_13_3_21">B−V color index\t+3.13 - +3.21</string>
    <string name="colour_index">Colour Index:</string>
    <string name="westerlund_1_26_or_wd_1_26_is_a_red_supergiant_within_the_outskirts_of_the_westerlund_1_super_star_cluster">Westerlund 1-26 or Wd 1-26 is a red supergiant within the outskirts of the Westerlund 1 super star cluster.</string>
    <string name="radius_1_165_58_or_1_221_120_r">Radius: 1,165 ± 58 or 1,221 ± 120 R☉</string>
    <string name="distance_to_earth_11_580_light_years">Distance to Earth: 11,580 light years</string>
    <string name="b_v_color_index_4_906">B−V color index\t+4.906</string>
    <string name="radial_velocity_rv_49_42_km_s">Radial velocity (Rv): -49.42 km/s</string>
    <string name="apparent_magnitude_v_17_194">Apparent magnitude (V): 17.194</string>
    <string name="distance_3_550_pc">Distance: 3,550 pc</string>
    <string name="stephenson_2_18_also_known_as_stephenson_2_dfk_1_or_rsgc2_18_is_a_red_supergiant_or_red_hypergiant_star_in_the_constellation_of_scutum">Stephenson 2-18, also known as Stephenson 2 DFK 1 or RSGC2-18, is a red supergiant or red hypergiant star in the constellation of Scutum</string>
    <string name="radius_1_4958_billion_km">Radius: 1.4958 billion km</string>
    <string name="distance_to_earth_19_570_light_years">Distance to Earth: 19,570 light years</string>
    <string name="radial_velocity_rv_20_km_s">Radial velocity (Rv): 20 km/s</string>
    <string name="apparent_magnitude_v_15_263">Apparent magnitude (V): 15.263</string>
    <string name="distance_6_000_pc">Distance: 6,000 pc</string>
</resources>